# RAG_Master_Class

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit-ci.yml
data/: founder_story.txt  index.faiss
langchain/demo/: main.py
notebooks/: aws_bedrock_access.ipynb  chunking_splitting_metadata.ipynb  cosign_normalization.ipynb  document_loading.ipynb  rag_pipeline_demo.ipynb  vectordb_comparision.ipynb
notebooks/.ipynb_checkpoints/: cosign_normalization-checkpoint.ipynb  vectordb_comparision-checkpoint.ipynb
